Fixing an issue on mobile phones (Fixes #1)

--- a/css/style.css
+++ b/css/style.css
@@ -4,13 +4,14 @@ html {
 
 .content {
   width: 300px;
-  height: 383px;
+  height: 417px;
   margin: auto;
   position: absolute;
   top: 0;
   left: 0;
   bottom: 0;
   right: 0;
+  padding: 15px 0;
 }
 
 .social {
